--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <input type="text" placeholder="Create Password" id="password" readonly />
         <table>
             <th>
-                <div id="button" class="btn1" onclick="genPassword">Generate</div>
+                <div id="button" class="btn1" onclick="genPassword()">Generate</div>
             </th>
             <th>
-                <div id="button" class="btn2" onclick="copyPassword">Copy</div>
+                <div id="button" class="btn2" onclick="copyPassword()">Copy</div>
             </th>
         </table>
     </div>
